tests/fail/invalid_rate.stderr
error: `rate` should be more than `frequency`, which is 440 Hz
 --> tests/fail/invalid_rate.rs:9:50
  |
9 |     let _wave = sine_wave!(frequency: 440, rate: 100);
  |                                                  ^^^
